--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+defmt = { version = "1.0.0", optional = true }
 embedded-hal = "1.0.0"
 embedded-hal-async = "1.0.0"
+
+[features]
+defmt = ["dep:defmt"]
