--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,14 @@
 name = "ldc3114"
 version = "0.1.0"
 edition = "2024"
+description = "Driver crate for the TI LDC3114 inductance-to-digital converter"
+repository = "https://github.com/andresovela/lis2dh-rs"
+documentation = "https://docs.rs/ldc3114"
+readme = "README.md"
+license = "MIT OR Apache-2.0"
+keywords = ["inductance", "driver", "i2c"]
+categories = ["embedded", "no-std"]
+exclude = [".github"]
 
 [dependencies]
 defmt = { version = "1.0.0", optional = true }
